--- a/src/app/pages/user/profile-page/profile-page.component.html
+++ b/src/app/pages/user/profile-page/profile-page.component.html
@@ -1,12 +1,16 @@
 <div class="profile-container">
   <div class="user-info">
     <div class="user-meta">
-      <img [src]="user.avatar_url || 'https://via.placeholder.com/120'" class="avatar" />
-      <div>
-        <h2>{{ user.name }}</h2>
-        <p>{{ user.email }}</p>
-        <p>{{ user.birth | date:'dd/MM/yyyy' }}</p>
-      </div>
+      @if (user) {
+        <div class="user-meta">
+          <img [src]="user.avatar_url || 'https://via.placeholder.com/120'" class="avatar" />
+          <div>
+            <h2>{{ user.name }}</h2>
+            <p>{{ user.email }}</p>
+            <p>{{ user.birth | date:'dd/MM/yyyy' }}</p>
+          </div>
+        </div>
+      }
     </div>
     <button mat-raised-button color="primary" class="edit-button" (click)="openEditProfileDialog()">
       <mat-icon>edit</mat-icon>
