--- a/src/app/pages/admin/management-event/management-event.component.html
+++ b/src/app/pages/admin/management-event/management-event.component.html
@@ -76,7 +76,9 @@
     <!-- Participants -->
     <ng-container matColumnDef="participants">
       <th mat-header-cell *matHeaderCellDef class="col-participants">Participants</th>
-      <td mat-cell *matCellDef="let row" class="col-participants">{{ row.participants }}</td>
+      <td mat-cell *matCellDef="let row" class="col-participants">
+        {{ row.current_participants || 0 }} / {{ row.max_participants }}
+      </td>
     </ng-container>
 
     <!-- Actions -->
