--- a/src/app/pages/user/profile-page/profile-page.component.css
+++ b/src/app/pages/user/profile-page/profile-page.component.css
@@ -1,8 +1,8 @@
 :host {
   display: block;
-  height: calc(100vh - 64px);
+  height: 100%;
+  width: 100%;
   overflow: hidden;
-  scroll-behavior: smooth;
 }
 
 html, body {
