create event page

--- a/src/app/pages/user/home/home.component.html
+++ b/src/app/pages/user/home/home.component.html
@@ -1,3 +1,4 @@
+
 <section class="section">
   <div class="section-header">
     <h2>Discussion</h2>
@@ -19,7 +20,7 @@
 <section class="section">
   <div class="section-header">
     <h2>Event</h2>
-    <button mat-button class="see-more">See more</button>
+    <button mat-button class="see-more" (click)="goToEventPage()">See more</button>
   </div>
 
   <div class="scroll-wrapper">
