--- a/src/app/components/card-event/card-event.component.html
+++ b/src/app/components/card-event/card-event.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card-container">
+<mat-card class="card-container" (click)="openDialog()" style="cursor: pointer;">
   <div class="image-wrapper">
     <img mat-card-image [src]="safeImageUrl" alt="Event Image" />
   </div>
