--- a/src/app/dialog/join-event-dialog/join-event-dialog.component.html
+++ b/src/app/dialog/join-event-dialog/join-event-dialog.component.html
@@ -1,1 +1,13 @@
-<p>join-event-dialog works!</p>
+<h2 mat-dialog-title>{{ data.title }}</h2>
+
+<mat-dialog-content>
+  <img [src]="data.imageUrl" style="width: 100%; margin-bottom: 12px;" alt="event image">
+  <p><strong>Date:</strong> {{ data.date | date:'fullDate' }}</p>
+  <p>{{ data.description }}</p>
+</mat-dialog-content>
+
+<mat-dialog-actions align="end">
+  <button mat-button mat-dialog-close>Close</button>
+  <button mat-raised-button color="primary">Sign up</button>
+</mat-dialog-actions>
+
