--- a/src/app/pages/user/event-room-page/event-room-page.component.html
+++ b/src/app/pages/user/event-room-page/event-room-page.component.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="toolbar-right">
-      <button mat-raised-button color="primary" class="create-btn">
+      <button mat-raised-button color="primary" class="create-btn" (click)="openCreateDialog()">
         <mat-icon>add</mat-icon> Create
       </button>
 
@@ -28,26 +28,27 @@
 
   <div class="card-area">
     <div class="card-grid">
-
-      <mat-card class="card-container" *ngFor="let card of pagedEvents" style="cursor: pointer;">
+      <mat-card
+        class="card-container"
+        *ngFor="let card of pagedEvents"
+        (click)="openDialog(card)"
+        style="cursor: pointer;">
         <div class="image-wrapper">
           <img mat-card-image [src]="card.image_url" alt="Event Image" />
         </div>
 
         <mat-card-content class="content">
-          <!-- Ngày bên trái -->
           <div class="date">
             <div class="month">{{ card.start_time | date: 'MMM' | uppercase }}</div>
             <div class="day">{{ card.start_time | date: 'd' }}</div>
           </div>
-
-          <!-- Thông tin bên phải -->
           <div class="info">
             <div class="title">{{ card.title }}</div>
             <div class="desc">{{ card.description || 'Không có mô tả.' }}</div>
           </div>
         </mat-card-content>
       </mat-card>
+
 
     </div>
   </div>
@@ -57,7 +58,7 @@
     <mat-paginator
       [length]="filteredEvents.length"
       [pageSize]="cardsPerPage"
-      [pageSizeOptions]="[12, 24, 48]"
+      [pageSizeOptions]="[2, 4, 8]"
       (page)="onPageChange($event)">
     </mat-paginator>
   </div>
