--- a/src/app/pages/user/home/home.component.css
+++ b/src/app/pages/user/home/home.component.css
@@ -3,13 +3,13 @@
   width: 100%;
   height: 100%;
   background-color: #f9f9f9;
-  padding: 24px;
+  padding: 16px 24px;
   box-sizing: border-box;
   overflow: hidden;
 }
 
 .section {
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 
 .section-header {
