update logo & edit css sign-up

--- a/src/app/dialog/sign-up/sign-up.component.html
+++ b/src/app/dialog/sign-up/sign-up.component.html
@@ -1,6 +1,6 @@
 <div class="signup-container">
   <div class="signup-card">
-    <img class="avatar" src="https://anhcuoiviet.vn/wp-content/uploads/2022/11/avatar-dep-dang-yeu-nu-5.jpg" alt="Avatar" />
+    <img class="avatar" src="../../../assets/images/logo.png" alt="Avatar" />
     <h3>Welcome to</h3>
     <h2>Create an Account</h2>
 
