--- a/src/app/dialog/sign-in/sign-in.component.html
+++ b/src/app/dialog/sign-in/sign-in.component.html
@@ -1,6 +1,6 @@
 <div class="signin-container">
   <div class="signin-card">
-    <img class="avatar" src="https://anhcuoiviet.vn/wp-content/uploads/2022/11/avatar-dep-dang-yeu-nu-5.jpg" alt="Avatar" />
+    <img class="avatar" src="../../../assets/images/logo.png" alt="Avatar" />
     <h3>Welcome back</h3>
     <h2>Sign in now!</h2>
 
