--- a/src/app/components/card-event/card-event.component.html
+++ b/src/app/components/card-event/card-event.component.html
@@ -10,8 +10,8 @@
       <div class="day">{{ getDayLabel() }}</div>
     </div>
     <div class="info">
-      <div class="title">{{ title }}</div>
-      <div class="desc">{{ description }}</div>
+      <h3>{{ event.title }}</h3>
+      <p>{{ event.description }}</p>
     </div>
   </mat-card-content>
 </mat-card>
