--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -11,7 +11,7 @@
       <mat-icon>notifications</mat-icon>
     </button>
     <div class="avatar">
-      <img src="/assets/images/avatar.png" alt="User avatar" />
+      <img [src]="avatarUrl" alt="User avatar" width="40" height="40" style="border-radius: 50%;" />
     </div>
   </div>
 </mat-toolbar>
