--- a/src/app/components/card-room/card-room.component.html
+++ b/src/app/components/card-room/card-room.component.html
@@ -11,7 +11,7 @@
   <mat-card-actions class="room-footer">
     <div class="participants">
       <mat-icon>group</mat-icon>
-      <span>{{ room.active_members || 100 }} people </span>
+      <span>{{ room.members || 0 }} people</span>
     </div>
     <button mat-raised-button color="primary" (click)="goToChatRoom()">View</button>
   </mat-card-actions>
